plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

// chat 패키지 에러나서 제외하고 돌림
//tasks.withType(JavaCompile) {
//	exclude '**/chat/**'
//	exclude '**/post/**'
//
//}

dependencies {
	// JWT 라이브러리 (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Spring Data & Validation
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Web & API
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'  // Swagger UI

	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Redis & Session 관리
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.session:spring-session-data-redis'
	implementation 'org.springframework.session:spring-session-jdbc'

	// Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 개발 편의 (DevTools)
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Database 드라이버
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Test Containers
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:mysql'
	implementation 'org.springframework:spring-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Spring Boot Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.webjars:sockjs-client:1.5.1'
	implementation 'org.webjars:stomp-websocket:2.3.4'
	//LocalDateTime 직렬화 오류 해결
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	// 이메일 전송을 위해 Spring Boot Starter Mail 의존성을 추가
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.19.1'

	// AWS Secrets Manager SDK
	implementation 'software.amazon.awssdk:secretsmanager:2.25.45'


}

tasks.named('test') {
	useJUnitPlatform()
}
bootJar {
	archiveBaseName = 'subook'         // 이름 명확화
	archiveVersion = ''                // 버전 생략
	archiveFileName = 'app.jar'        // 최종 파일명을 app.jar로 고정
}